--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,3 +12,6 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+# Use the mouse to select windows
+set -g mouse on
