Open new panes with same path

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,11 +7,18 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Use Vim for resizing panes
+# Resize panes with shift + Vim key
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# Open new panes with current path
+bind s split-window -h -c '#{pane_current_path}'
+bind v split-window -v -c '#{pane_current_path}'
+
 # Use the mouse to select windows
 set -g mouse on
+
+# Reload .tmux.conf:
+# tmux source-file ~/.tmux.conf
